{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 12,
  "lineage": "4a5389e8-c6c9-c395-c9c8-6eb7f1fb623b",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "mtc-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.86.69.201",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "mtc-ip",
            "resource_group_name": "mtc-resource",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/networkInterfaces/mtc-nic",
            "internal_domain_name_suffix": "zjxjzp4uveke3lu3zhy24xsyug.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
                "subnet_id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet"
              }
            ],
            "location": "centralus",
            "mac_address": "00-0D-3A-91-E3-21",
            "name": "mtc-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "mtc-resource",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Compute/virtualMachines/mtc-vm"
          },
          "dependencies": [
            "azurerm_public_ip.mtc-ip",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "location": "centralus",
            "name": "mtc-sg",
            "resource_group_name": "mtc-resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "mtc-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "443",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/networkSecurityGroups/mtc-sg/securityRules/mtc-dev-rule",
            "name": "mtc-dev-rule",
            "network_security_group_name": "mtc-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtc-resource",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.86.69.201",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "mtc-ip",
            "resource_group_name": "mtc-resource",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
            "name": "mtc-subnet",
            "resource_group_name": "mtc-resource",
            "virtual_network_name": "mtc-network"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg",
            "azurerm_virtual_network.mtc-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-subnet-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
            "network_security_group_id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "subnet_id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bf9c6eca-a9d4-4e14-ae9d-c9f1cf5e58a6",
            "id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network",
            "location": "centralus",
            "name": "mtc-network",
            "resource_group_name": "mtc-resource",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
                "name": "mtc-subnet",
                "security_group": "/subscriptions/d59b3d1b-06c6-40e9-9838-8c0ceca6c2e5/resourceGroups/mtc-resource/providers/Microsoft.Network/networkSecurityGroups/mtc-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    }
  ]
}